# Clearning

./: .gitignore  Board.cpp  CMakeLists.txt  Player.cpp  Player.hpp  README.md  first.cpp  firstExec  main.cpp
include/: Board.hpp  Game.hpp  Move.hpp  Piece.hpp  Player.hpp
src/: Board.cpp  Game.cpp  Player.cpp
test/: test_board.cpp  test_game.cpp  test_main.cpp  test_player.cpp
